<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/greenb"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageView
        android:id="@+id/regimg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ahh" />

    <ImageView
        android:id="@+id/key"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_below="@id/img1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:importantForAccessibility="no"
        android:src="@drawable/syahhidaa" />


    <EditText
        android:id="@+id/emaildreg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/key"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/button_shape"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/bltextedit"
        android:textColorHint="#00796B"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/usernamereg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/emaildreg"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColor="@color/bltextedit"
        android:textColorHint="#00796B"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/passwordreg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/usernamereg"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColorHint="#00796B"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
        android:autofillHints=""
        android:textColor="@color/bltextedit"/>

    <ImageButton
        android:id="@+id/btnloginreg"
        android:layout_below="@+id/passwordreg"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/greenb"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/loginh" />

    <ImageButton
        android:id="@+id/cancelreg"
        android:layout_below="@id/btnloginreg"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/greenb"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/cancelh" />

</RelativeLayout>