<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green"
        android:weightSum="10">


        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="match_parent"
            android:layout_height="4500dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:layout_marginTop="50dp"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:padding="3dp"
            android:rowCount="3">



            <androidx.cardview.widget.CardView
                android:id="@+id/rinjani"
                app:cardBackgroundColor="@color/greentea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/rinjani" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40sp"
                        android:text="@string/gunung_rinjani"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/ciremai"
                app:cardBackgroundColor="@color/greentea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ciremai" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40sp"
                        android:text="@string/gunung_ciremai"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/prau"
                app:cardBackgroundColor="@color/greentea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/prau" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40sp"
                        android:text="Gunung Prau"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/merbabu"
                app:cardBackgroundColor="@color/greentea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/merbabu" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40sp"
                        android:text="Gunung Merbabu"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/semeru"
                app:cardBackgroundColor="@color/greentea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/semeru" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40sp"
                        android:text="Gunung Semeru"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/slamet"
                app:cardBackgroundColor="@color/greentea"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/slamet" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40sp"
                        android:text="Gunung Slamet"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppinsbold"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:id="@+id/lawu"
            app:cardBackgroundColor="@color/greentea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/lawwuu" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40sp"
                    android:text="@string/gunung_lawu"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppinsbold"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:id="@+id/sindoro"
            app:cardBackgroundColor="@color/greentea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sindoro" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40sp"
                    android:text="@string/gunung_sindoro"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppinsbold"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:id="@+id/sumbing"
            app:cardBackgroundColor="@color/greentea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sumbing" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40sp"
                    android:text="Gunung Sumbing"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppinsbold"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:id="@+id/merapi"
            app:cardBackgroundColor="@color/greentea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/merapi" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40sp"
                    android:text="Gunung Merapi"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppinsbold"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        </GridLayout>

    </RelativeLayout>
</ScrollView>